--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,31 +1,20 @@
-<% form_for(@contact) do |f| %>
-  <%= f.error_messages %>
+<% form_for(@contact) do |@f| %>
+  <%= @f.error_messages %>
 
   <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+    <%= @f.label :name %><br />
+    <%= @f.text_field :name %>
   </p>
   <p>
-    <%= f.label :street %><br />
-    <%= f.text_field :street %>
+    <%= @f.label :street %><br />
+    <%= @f.text_field :street %>
   </p>
   <p>
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
+    <%= @f.label :zip %><br />
+    <%= @f.text_field :zip %>
   </p>
+  <%= render :partial => 'city_state_parish' %>
   <p>
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </p>
-  <p>
-    <%= f.label :zip %><br />
-    <%= f.text_field :zip %>
-  </p>
-  <p>
-    <%= f.label :parish %><br />
-    <%= f.text_field :parish %>
-  </p>
-  <p>
-    <%= f.submit "Save" %>
+    <%= @f.submit "Save" %>
   </p>
 <% end %>
