AJAX lookup of city, state and parish(county)

--- a/app/views/contacts/_city_state_parish.html.erb
+++ b/app/views/contacts/_city_state_parish.html.erb
@@ -1,12 +1,12 @@
 <p>
-  <%= @f.label :city %><br />
-  <%= @f.text_field :city %>
+  City:<br />
+  <%= text_field :contact, :city %>
 </p>
 <p>
-  <%= @f.label :state %><br />
-  <%= @f.text_field :state %>
+  State:<br />
+  <%= text_field :contact, :state %>
 </p>
 <p>
-  <%= @f.label :parish %><br />
-  <%= @f.text_field :parish %>
+  Parish:<br />
+  <%= text_field :contact, :parish %>
 </p>
