--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,20 +1,36 @@
-<% form_for(@contact) do |@f| %>
-  <%= @f.error_messages %>
+<% form_for(@contact) do |f| %>
+  <%= f.error_messages %>
 
   <p>
-    <%= @f.label :name %><br />
-    <%= @f.text_field :name %>
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
   </p>
   <p>
-    <%= @f.label :street %><br />
-    <%= @f.text_field :street %>
+    <%= f.label :street %><br />
+    <%= f.text_field :street %>
   </p>
   <p>
-    <%= @f.label :zip %><br />
-    <%= @f.text_field :zip %>
+    <%= f.label :zip %><br />
+    <%= f.text_field :zip %>
   </p>
-  <%= render :partial => 'city_state_parish' %>
   <p>
-    <%= @f.submit "Save" %>
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
+  </p>
+  <p>
+    <%= f.label :state %><br />
+    <%= f.text_field :state %>
+  </p>
+  <p>
+    <%= f.label :parish %><br />
+    <%= f.text_field :parish %>
+  </p>
+  <%= observe_field :contact_zip, 
+                    :url => { :action => :lookup_zip },
+                    :frequency => 1.0,
+                    :with => 'zip'
+  %>
+  <p>
+    <%= f.submit "Save" %>
   </p>
 <% end %>
