Changed parish to county since nobody knows what a parish is...

--- a/app/views/contacts/_city_state_parish.html.erb
+++ b/app/views/contacts/_city_state_parish.html.erb
@@ -7,6 +7,6 @@
   <%= text_field :contact, :state %>
 </p>
 <p>
-  Parish:<br />
-  <%= text_field :contact, :parish %>
+  County:<br />
+  <%= text_field :contact, :county %>
 </p>
