--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -22,8 +22,8 @@
     <%= f.text_field :state %>
   </p>
   <p>
-    <%= f.label :parish %><br />
-    <%= f.text_field :parish %>
+    <%= f.label :county %><br />
+    <%= f.text_field :county %>
   </p>
   <%= observe_field :contact_zip, 
                     :url => { :action => :lookup_zip },
